--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@ padding: 15px;
     border-radius: 50%;
 }
 
+.wh{
+     width: 50px;
+     height: 50px;
+}
 .tm-social {
     width: 50px;
     height: 50px;
